<resources>
    <string name="app_name">Icarus In Bloom</string>
    <string name="app_name_short">InBloom</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Plants</string>
    <string name="tab_text_3">Message</string>
    <string name="generic_plant_info">This is my plant. It is the best plant c:</string>
    <string name="action_settings">Settings</string>
    <string name="action_logOut">Log Out</string>
    <string name="watering_info">Water info: normal, every 3 days</string>
    <string name="last_watered">Last water date: 12/02/2002</string>
    <string name="soil_change">Soil change: 1/year</string>
    <string name="plant_token">De-v8aTD7o019T5P3T_ReGeB27zMkNdmb9rga5EhGCQ</string>
    <string name="default_notification_channel_id">2</string>
    <string name="notif_msg">Water your plants!</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="go_to_sign_up">Go To Sign Up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_log_in">Go To Log in</string>
    <string name="birthday">Birthday</string>
    <string name="add_a_new_plant_companion">Add a new plant companion</string>
    <string name="name">Name</string>
    <string name="plant_info">Plant Info</string>
    <string name="plant_species">Plant species</string>
    <string name="plant_bday">Plant Bday</string>
    <string name="save_changes">Save changes</string>
    <string name="select_image">Select image</string>
    <string name="set">Set</string>
    <string name="set_species_first">Set species first!</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="no_plants_yet">No plants yet</string>
    <string name="no_info_yet">No info yet</string>
    <string name="take_photo">Take Photo</string>
    <string name="add">Add</string>
</resources>