<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainAddLayout"
    tools:context=".AddActivity"
    android:background="@color/baby_blue"
    android:elevation="8dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/bgImagePlant"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="508dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:elevation="8dp"
        android:background="@drawable/white_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--
        android:background="@drawable/border_rectangle"
-->


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/add_a_new_plant_companion"
            android:textColor="@color/accent_dark"
            android:background="@drawable/orange_background"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:shadowColor="@color/accent_dark"
            android:shadowDx="3"
            android:shadowRadius="3"
            />


        <EditText
            android:id="@+id/plantNameEdit"
            android:layout_width="227dp"
            android:layout_height="41dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="92dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:background="@drawable/border_rectangle"
            android:text="@string/name"
            android:textColor="@color/accent_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:shadowColor="@color/accent_dark"
            android:shadowDx="3"
            android:shadowRadius="2"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="92dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/border_rectangle"
            android:gravity="center"
            android:text="@string/plant_info"
            android:textColor="@color/accent_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:shadowColor="@color/accent_dark"
            android:shadowDx="3"
            android:shadowRadius="2"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="92dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/border_rectangle"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:shadowColor="@color/accent_dark"
            android:shadowDx="3"
            android:shadowRadius="2"
            android:text="@string/plant_species"
            android:textAllCaps="true"
            android:textColor="@color/accent_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="92dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_rectangle"
            android:gravity="center"
            android:shadowColor="@color/accent_dark"
            android:shadowDx="3"
            android:shadowRadius="2"
            android:text="@string/plant_bday"
            android:textAllCaps="true"
            android:textColor="@color/accent_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/plantSpeciesEdit"
            android:layout_width="159dp"
            android:layout_height="41dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="38dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.284"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/plantInfoEdit" />

        <EditText
            android:id="@+id/plantInfoEdit"
            android:layout_width="227dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/plantNameEdit" />

        <TextView
            android:id="@+id/saveChangesAdd"
            android:layout_width="120dp"
            android:layout_height="52dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:shadowColor="@color/accent_dark"
            android:shadowDx="3"
            android:shadowRadius="2"
            android:text="@string/save_changes"
            android:textColor="@color/accent_dark"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="96dp"
            android:layout_height="90dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/plant" />

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="400dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/addPlantImageView"
            android:layout_width="100dp"
            android:layout_height="80dp"

            android:background="@color/light_orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:srcCompat="@drawable/plant" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/addPlantImageButton"
            android:layout_width="100dp"
            android:layout_height="54dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="76dp"
            android:backgroundTint="@color/baby_blue"
            android:text="@string/select_image"
            android:textColor="@color/accent_dark"
            android:textSize="10sp"
            android:shadowColor="@color/accent_dark"
            android:shadowDx="1"
            android:shadowRadius="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plantSpeciesEdit" />

        <Button
            android:id="@+id/setSpeciesButton"
            android:layout_width="74dp"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/baby_blue"
            android:onClick="setSpecies"
            android:text="@string/set"
            android:textColor="@color/accent_dark"
            android:textSize="10sp"
            android:shadowColor="@color/accent_dark"
            android:shadowDx="1"
            android:shadowRadius="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plantInfoEdit" />

        <EditText
            android:id="@+id/plantBdayEdit"
            android:layout_width="227dp"
            android:layout_height="41dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="date"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/plantSpeciesEdit" />

        <TextView
            android:id="@+id/warningTextAddPlant"
            android:layout_width="119dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:text="@string/set_species_first"
            android:gravity="center"
            android:textColor="@color/accent_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>